--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ plugins:
 title: Лабы <!-- Это текст для закладки страницы в браузере -->
 description: Серия из моих лабораторных работ по созданию <b>3D-моделей</b> местности
 
-markdown: GFM
+markdown: kramdown
 
-show_downloads: true
+show_downloads: false
 google_analytics:
 
 highlighter: rouge
