--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Лабы <!-- Это текст для закладки страницы в браузере -->
 description: Серия из моих лабораторных работ по созданию <b>3D-моделей</b> местности
 
-show_downloads: true
+show_downloads: false
 google_analytics:
 
 highlighter: rouge
