--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,10 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Лабы <!-- Это текст для закладки страницы в браузере -->
-description: Серия из моих лабораторных работ по созданию <b>3D-моделей</b> местности
+title: Это <i>текст</i> **title** из файла _config.yml
+description: Это <i>текст</i> **description** из файла _config.yml
 
 show_downloads: false
 google_analytics:
 
 highlighter: rouge
-
-
